[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/bgs/TTCBG.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Signika-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://navigation/games/settings.gd" type="Script" id=3]
[ext_resource path="res://assets/theme/blue_boxCheckmark.png" type="Texture" id=4]
[ext_resource path="res://assets/theme/blue_button06.png" type="Texture" id=5]
[ext_resource path="res://assets/theme/blue_button03.png" type="Texture" id=6]
[ext_resource path="res://assets/theme/blue_button01.png" type="Texture" id=7]
[ext_resource path="res://assets/theme/blue_button02.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=7]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 190, 45 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 190, 49 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 190, 45 )

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 2 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="Bg"]
anchor_top = 0.126042
anchor_right = 1.0
anchor_bottom = 0.178125
custom_fonts/font = SubResource( 7 )
text = "SETTINGS"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="Bg"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -305.0
margin_bottom = -205.0
custom_fonts/font = SubResource( 1 )
text = "LANGUAGE"
align = 1

[node name="OptionButton" type="OptionButton" parent="Bg"]
anchor_left = 0.0277778
anchor_top = 0.408854
anchor_right = 0.972222
anchor_bottom = 0.491667
custom_fonts/font = SubResource( 2 )
text = "Slovenský"
expand_icon = true
items = [ "Slovenský", null, false, 0, null, "English", null, false, 1, null, "Český", null, false, 2, null, "Polski", null, false, 3, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label3" type="Label" parent="Bg"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 4.0
margin_top = 217.0
margin_right = 4.0
margin_bottom = 317.0
custom_fonts/font = SubResource( 1 )
text = "do not send information"
align = 1

[node name="Button" type="Button" parent="Bg"]
anchor_top = 0.769792
anchor_right = 1.0
anchor_bottom = 0.821875
margin_left = 30.0
margin_right = -30.0
margin_bottom = -6.10352e-05
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 4 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button2" type="Button" parent="Bg"]
anchor_top = 0.679167
anchor_right = 1.0
anchor_bottom = 0.73125
margin_left = 30.0
margin_right = -30.0
margin_bottom = -6.10352e-05
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 4 )
text = "RESET-BLOCKED"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CheckButton" type="CheckButton" parent="Bg"]
anchor_top = 0.542188
anchor_right = 1.0
anchor_bottom = 0.578646
margin_left = 30.0
margin_right = -30.0
margin_bottom = -6.10352e-05
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_icons/off = ExtResource( 5 )
custom_icons/on = ExtResource( 4 )
enabled_focus_mode = 0
text = "ANALYTICS"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="item_selected" from="Bg/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="gui_input" from="Bg/Button" to="." method="_on_Button_gui_input"]
[connection signal="pressed" from="Bg/Button2" to="." method="_on_Button2_pressed"]
[connection signal="toggled" from="Bg/CheckButton" to="." method="_on_CheckButton_toggled"]
